--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -99,6 +99,7 @@ $input-border-focus:             $btn-primary-color !default;
 
 @import "_bootstrap";
 @import "_fontawesome";
+@import "../../../node_modules/react-dates/lib/css/_datepicker.css";
 
 @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Source+Sans+Pro:300,400,600,700');
 
